# voris_bringup

./: .gitignore  CMakeLists.txt  package.xml
launch/: active_system.launch.py  blueos_bringup.launch.py  bluerov_bringup.launch.py  bluerov_bringup.py  bluerov_ipc_passive.launch.py  bluerov_passive.launch.py  lab_ipc_active.launch.py  lab_ipc_passive.launch.py  passive_system.launch.py  rosbag_ue_system.launch.py  sim_ipc_passive.launch.py  sm2.launch  sm2.launch.py  sm2_color.launch.py  sm2_sim.launch.py  sm3.launch.py  sm3_laser.launch.py  sm4.launch.py
src/: image_rescale.cpp
